# epg-grabber

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  README.md  app.py  generate.py  pyproject.toml  requirements-tests.txt  requirements.txt  setup.py  tests.py
.devcontainer/: devcontainer.json
.github/workflows/: pipeline.yml  pipeline.yml.disabled  test.yml  tests.yml
common/: constants.py  utils.py
config/: constants.py  env.py
docs/: CONTRIBUTING.md
epg_grabber/: app.py  cli.py  constants.py  generate.py  models.py  utils.py
epg_grabber/config/: constants.py  env.py
epg_grabber/helper/: classes.py  epgwriter.py  utils.py  xmlutils.py
epg_grabber/models/: tvg.py
epg_grabber/sites/: astro.py  astro_com_my.py  beinsports_id.py  cgtn.py  cinemaworld_asia.py  dens_tv.py  epgsky_com.py  fetchtv.py  mana2_my.py  mewatch.py  mewatch_sg.py  mncvision.py  myklik_rtm.py  nhk.py  nostv_pt.py  nowplayer.py  playtv_unifi.py  plex.py  redbull_tv.py  rtmklik_rtm_gov_my.py  sky.py  sooka_my.py  starhubtvplus.py  starhubtvplus_com.py  tonton_com_my.py  unifi_com_my.py  visionplus.py  visionplus_id.py
scripts/: generate.py  unfi_generate.py
sites/: SITES.MD  astro.py  beinsports_id.py  cgtn.py  dens_tv.py  fetchtv.py  mewatch.py  mncvision.py  myklik_rtm.py  nhk.py  nowplayer.py  nowplayer.py.disable  playtv_unifi.py  redbull_tv.py  sky.py  starhubtvplus.py  starhubtvplus.py.disabled  thetennischannel.py  visionplus.py
source/: classes.py  utils.py  xmlutils.py
tests/: __init__.py  main.py  requirements.txt  test_app.py  test_get_program.py
(+78 files in other folders)
